# SelfAndCorrectiveRAG

./: README.md  main_ingestion.py  no_rag_retrieval.py  pyproject.toml  rag_adaptive.py  rag_corrective.py  rag_fusion.py  rag_retrieval_pipeline.py  rag_self.py
core/: embeddings.py  llm.py  textsplitter.py  vectorstore.py
ingestion/: pdfload.py
